# discrete-rocknroll-revamped

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.toml  example.toml  reeks.toml  velocity_from_file.toml
configs/dragmodel/: liu.toml  oneill.toml  stokes.toml
configs/fluct/: fluct + perturbed.toml  fluct.toml  fluctzhang.toml  nofluct.toml  static_perturbed.toml
configs/runtype/: sequential.toml  vectorized.toml
configs/test/: config_d10.toml  config_d20.toml
configs/velocity/: config_u025.toml  config_u05.toml  config_u075.toml  config_u1.toml
input/: velocity.npy
rnr/: aeromodel.py  builder.py  check_config.py  config.py  core.py  distribution.py  flow.py  forcemodel.py  model.py  parameters.py  results.py  simulation.py  utils.py
rnr/core/: aeromodel.py  distribution.py  flow.py  model.py
rnr/postproc/: plotting.py  results.py
rnr/simulation/: scripts.py  simulation.py
rnr/utils/: config.py  misc.py  parameters.py
tests/: test_distrib.py
