[project]
name = "discrete-rocknroll-revamped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
    "python-dateutil==2.9.0.post0",
    "rich==13.9.4",
    "scipy==1.15.2",
    "six==1.17.0",
    "toml==0.10.2",
    "typing-extensions==4.12.2",
]

[tool.coverage.run]
omit = [
    "*/__init__.py", 
    "main.py",
    "tests/*",
    ]
